fix popup overlap on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,8 @@ ol, ul {
     color: #fff;
     padding: 5px;
     left: 50%;
-    top: 98%;
-    transform: translate(-50%, -98%);
+    top: 2%;
+    transform: translate(-50%, -2%);
     position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
